✨ Importen foreslår at lukke en opgave, hvis sagen er løst i ADO eller Jira
